[gd_scene load_steps=30 format=3 uid="uid://by8ec7g8bklv1"]

[ext_resource type="Script" uid="uid://odj1hqi0xkfq" path="res://Scripts/hud.gd" id="1_5udud"]
[ext_resource type="FontFile" uid="uid://blhugc381c0nu" path="res://brackeys_platformer_assets/fonts/PixelOperator8-Bold.ttf" id="1_kgovw"]
[ext_resource type="Texture2D" uid="uid://ikmndn0j245r" path="res://brackeys_platformer_assets/sprites/knight.png" id="3_vodeq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jx05c"]
atlas = ExtResource("3_vodeq")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vhvd"]
atlas = ExtResource("3_vodeq")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2nbm"]
atlas = ExtResource("3_vodeq")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybr15"]
atlas = ExtResource("3_vodeq")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmvhq"]
atlas = ExtResource("3_vodeq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iersn"]
atlas = ExtResource("3_vodeq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5p0qj"]
atlas = ExtResource("3_vodeq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yuqgu"]
atlas = ExtResource("3_vodeq")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8v2xp"]
atlas = ExtResource("3_vodeq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q8k4"]
atlas = ExtResource("3_vodeq")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2enhl"]
atlas = ExtResource("3_vodeq")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ruciq"]
atlas = ExtResource("3_vodeq")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yk6xx"]
atlas = ExtResource("3_vodeq")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bb2x8"]
atlas = ExtResource("3_vodeq")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_60xba"]
atlas = ExtResource("3_vodeq")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2c22q"]
atlas = ExtResource("3_vodeq")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlk8b"]
atlas = ExtResource("3_vodeq")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_had87"]
atlas = ExtResource("3_vodeq")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_axwfv"]
atlas = ExtResource("3_vodeq")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tubf"]
atlas = ExtResource("3_vodeq")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4yfx"]
atlas = ExtResource("3_vodeq")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_alogn"]
atlas = ExtResource("3_vodeq")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4j5ex"]
atlas = ExtResource("3_vodeq")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dj8y3"]
atlas = ExtResource("3_vodeq")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh05g"]
atlas = ExtResource("3_vodeq")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_is2x6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jx05c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vhvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2nbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybr15")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmvhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iersn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5p0qj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yuqgu")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8v2xp")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q8k4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2enhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruciq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yk6xx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bb2x8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60xba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2c22q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlk8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_had87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axwfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tubf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4yfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alogn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4j5ex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dj8y3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh05g")
}],
"loop": true,
"name": &"Run",
"speed": 15.0
}]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5udud")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 36.0
offset_right = 394.0
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("1_kgovw")
theme_override_font_sizes/font_size = 50
text = "Vida:"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 624.0
offset_top = 35.0
offset_right = 1093.0
offset_bottom = 86.0
theme_override_fonts/font = ExtResource("1_kgovw")
theme_override_font_sizes/font_size = 50
text = "Tempo: 100"

[node name="vida1" type="AnimatedSprite2D" parent="."]
position = Vector2(304, 56)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_is2x6")
animation = &"Death"
autoplay = "Idle"

[node name="vida2" type="AnimatedSprite2D" parent="."]
position = Vector2(378, 56)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_is2x6")
animation = &"Death"
autoplay = "Idle"

[node name="vida3" type="AnimatedSprite2D" parent="."]
position = Vector2(447, 56)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_is2x6")
animation = &"Death"
autoplay = "Idle"
